# watchdog

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  vercel.json  watchdog-refresh-now.cmd
config/: config.example.yaml  config.yaml
dashboard/: .env.example  package-lock.json  package.json
dashboard/tests/: asset-groups.test.ts  auth-core.test.ts  calendar-payload.test.ts  dashboard-home-render.test.ts  dashboard-news-render.test.ts  dashboard-payload.test.ts  dashboard-view.test.ts  format-date.test.ts  home-insights.test.ts  news-risk-payload.test.ts  news-risk-view.test.ts  opinion-payload.test.ts  opinion-view.test.ts  portfolio-view.test.ts  report-payload.test.ts  report-view-render.test.ts  risk-view.test.ts  storage.test.ts
scripts/: build_exe.ps1  portfolio_watchdog_entry.py  refresh_dashboard_now.ps1  run_news_watchdog.ps1  run_watchdog.ps1
tests/: test_benchmark.py  test_calculator.py  test_cloud_contract.py  test_config_runtime.py  test_dashboard_data.py  test_dashboard_loop.py  test_dashboard_news_metadata.py  test_economic_calendar.py  test_import_history.py  test_investment_opinion.py  test_kis_transactions.py  test_ledger_cli.py  test_ledger_ingestion.py  test_ledger_repository.py  test_news_risk.py  test_news_risk_cli.py  test_notifiers.py  test_opinion_cli.py  test_pdf_report.py  test_performance.py  test_performance_service.py  test_reconciliation.py  test_report_archive.py  test_report_data.py  test_reports.py  test_research_report.py  test_scheduler.py  test_upbit_transactions.py  test_weekly_report.py
(+99 files in other folders)
