[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-watchdog"
version = "0.1.0"
description = "Portfolio Watchdog Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "PyJWT>=2.8",
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
portfolio-watchdog = "portfolio_watchdog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
